tests/baselines/reference/u-invalid-range-lookbehind.errors.txt
u-invalid-range-lookbehind.ts(19,9): error TS1505: There is nothing available for repetition.
u-invalid-range-lookbehind.ts(19,15): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== u-invalid-range-lookbehind.ts (2 errors) ====
    // Copyright (C) 2018 Igalia S. L. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    /*---
    esid: sec-regular-expressions-patterns
    description: Lookbehinds are not treated as a QuantifiableAssertion
    info: |
        Term[U] ::
             [~U] QuantifiableAssertion Quantifier
    
        QuantifiableAssertion[N]::
            ( ? = Disjunction[~U, ?N] )
            ( ? ! Disjunction[~U, ?N] )
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /.(?<=.){2,3}/u;
            ~~~~~
!!! error TS1505: There is nothing available for repetition.
                  ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    